# Functional-Programming-in-Python

./: README.md  README.md.save
Resources/0.Introduction/: test.py
Resources/1.Functions/: class_primary.py
funcpy/: README.rst  pyproject.toml
funcpy/funcpy/: README.md
funcpy/funcpy/py_docs/1/: file_values.txt  iterator2.py
funcpy/funcpy/py_docs/1 iterators/: iterator.py  iterator2.py  iterator3.py
funcpy/funcpy/py_docs/2 generators/: generator.py
funcpy/tests/: test_funcpy.py
